--- a/design/gallery.html
+++ b/design/gallery.html
@@ -96,7 +96,7 @@
         </div>
       </nav>
     </header>
-    <main class="whitespace-nowrap">
+    <main class="whitespace-nowrap text-sm">
       <div class="gap-4 columns-5 m-5 whitespace-nowrap">
         <div class="group mb-2">
           <img
@@ -113,6 +113,17 @@
           <img
             class="w-full mb-2 border-solid border-8 border-[#56280e] border-opacity-90 hover:border-opacity-100 shadow-[0_4px_4px_rgba(0,0,0,0.25)] hover:shadow-[0_4px_4px_rgba(0,0,0,0.75)]"
             src="https://res.cloudinary.com/duxmtidm1/image/upload/v1679290114/reading_x38196.jpg"
+          />
+          <div class="invisible group-hover:visible text-center">
+            <p class="font-bold">Artist Name</p>
+            <p>Title of Work</p>
+            <p>Medium of Work</p>
+          </div>
+        </div>
+        <div class="group mb-2 whitespace-nowrap">
+          <img
+            class="w-full mb-2 border-solid border-8 border-[#56280e] border-opacity-90 hover:border-opacity-100 shadow-[0_4px_4px_rgba(0,0,0,0.25)] hover:shadow-[0_4px_4px_rgba(0,0,0,0.75)]"
+            src="https://res.cloudinary.com/duxmtidm1/image/upload/v1679345559/Cole_Thomas_The_Course_of_Empire_The_Savage_State_1836_fbv5ds.jpg"
           />
           <div class="invisible group-hover:visible text-center">
             <p class="font-bold">Artist Name</p>
@@ -145,6 +156,17 @@
         <div class="group mb-2 whitespace-nowrap">
           <img
             class="w-full mb-2 border-solid border-8 border-[#56280e] border-opacity-90 hover:border-opacity-100 shadow-[0_4px_4px_rgba(0,0,0,0.25)] hover:shadow-[0_4px_4px_rgba(0,0,0,0.75)]"
+            src="https://res.cloudinary.com/duxmtidm1/image/upload/v1679345651/Cole_Thomas_The_Course_of_Empire_The_Arcadian_or_Pastoral_State_1836_rwxztd.jpg"
+          />
+          <div class="invisible group-hover:visible text-center">
+            <p class="font-bold">Artist Name</p>
+            <p>Title of Work</p>
+            <p>Medium of Work</p>
+          </div>
+        </div>
+        <div class="group mb-2 whitespace-nowrap">
+          <img
+            class="w-full mb-2 border-solid border-8 border-[#56280e] border-opacity-90 hover:border-opacity-100 shadow-[0_4px_4px_rgba(0,0,0,0.25)] hover:shadow-[0_4px_4px_rgba(0,0,0,0.75)]"
             src="https://res.cloudinary.com/duxmtidm1/image/upload/v1679290101/kanawaga_gt8xjy.jpg"
           />
           <div class="invisible group-hover:visible text-center">
@@ -157,6 +179,17 @@
           <img
             class="w-full mb-2 border-solid border-8 border-[#56280e] border-opacity-90 hover:border-opacity-100 shadow-[0_4px_4px_rgba(0,0,0,0.25)] hover:shadow-[0_4px_4px_rgba(0,0,0,0.75)]"
             src="https://res.cloudinary.com/duxmtidm1/image/upload/v1679339414/70736-1024__44526_jc1e45.jpg"
+          />
+          <div class="invisible group-hover:visible text-center">
+            <p class="font-bold">Artist Name</p>
+            <p>Title of Work</p>
+            <p>Medium of Work</p>
+          </div>
+        </div>
+        <div class="group mb-2 whitespace-nowrap">
+          <img
+            class="w-full mb-2 border-solid border-8 border-[#56280e] border-opacity-90 hover:border-opacity-100 shadow-[0_4px_4px_rgba(0,0,0,0.25)] hover:shadow-[0_4px_4px_rgba(0,0,0,0.75)]"
+            src="https://res.cloudinary.com/duxmtidm1/image/upload/v1679345827/Cole_Thomas_The_Consummation_The_Course_of_the_Empire_1836_bbhni6.jpg"
           />
           <div class="invisible group-hover:visible text-center">
             <p class="font-bold">Artist Name</p>
@@ -200,6 +233,17 @@
         <div class="group mb-2 whitespace-nowrap">
           <img
             class="w-full mb-2 border-solid border-8 border-[#56280e] border-opacity-90 hover:border-opacity-100 shadow-[0_4px_4px_rgba(0,0,0,0.25)] hover:shadow-[0_4px_4px_rgba(0,0,0,0.75)]"
+            src="https://res.cloudinary.com/duxmtidm1/image/upload/v1679341629/1858_4_fvd2fb.jpg"
+          />
+          <div class="invisible group-hover:visible text-center">
+            <p class="font-bold">Artist Name</p>
+            <p>Title of Work</p>
+            <p>Medium of Work</p>
+          </div>
+        </div>
+        <div class="group mb-2 whitespace-nowrap">
+          <img
+            class="w-full mb-2 border-solid border-8 border-[#56280e] border-opacity-90 hover:border-opacity-100 shadow-[0_4px_4px_rgba(0,0,0,0.25)] hover:shadow-[0_4px_4px_rgba(0,0,0,0.75)]"
             src="https://res.cloudinary.com/duxmtidm1/image/upload/v1679340587/128-balloon-girl_u-l-q139zel0_vflf0i.jpg"
           />
           <div class="invisible group-hover:visible text-center">
@@ -233,7 +277,7 @@
         <div class="group mb-2 whitespace-nowrap">
           <img
             class="w-full mb-2 border-solid border-8 border-[#56280e] border-opacity-90 hover:border-opacity-100 shadow-[0_4px_4px_rgba(0,0,0,0.25)] hover:shadow-[0_4px_4px_rgba(0,0,0,0.75)]"
-            src="https://res.cloudinary.com/duxmtidm1/image/upload/v1679341629/1858_4_fvd2fb.jpg"
+            src="https://res.cloudinary.com/duxmtidm1/image/upload/v1679346049/Cole_Thomas_The_Course_of_Empire_Desolation_1836_wlisok.jpg"
           />
           <div class="invisible group-hover:visible text-center">
             <p class="font-bold">Artist Name</p>
