--- a/design/gallery.html
+++ b/design/gallery.html
@@ -14,7 +14,7 @@
   </head>
   <body>
     <header>
-      <nav class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded">
+      <nav class="border-gray-200 px-2 sm:px-4 py-2.5 rounded">
         <div
           class="container flex flex-wrap items-center justify-between mx-auto"
         >
